# BazelBuildForGo

./: BUILD.bazel  Gopkg.toml  WORKSPACE
project1/: BUILD.bazel  main.go
project1/dep1/: BUILD.bazel  dep1.go
project1/p1lib/: BUILD.bazel  p1lib.go
project2/: BUILD.bazel  main.go
