load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wix-private/BazelBuildForGo/project1",
    visibility = ["//visibility:private"],
    deps = [
        "//project1/p1lib:go_default_library",
        "//vendor/github.com/coreos/etcd/client:go_default_library",
    ],
)

go_binary(
    name = "project1",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
