load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar", "pkg_deb")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl","container_image","container_push")


go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wix-private/BazelBuildForGo/project1",
    visibility = ["//visibility:private"],
    deps = [
        "//project1/p1lib:go_default_library",
        "//vendor/github.com/coreos/etcd/client:go_default_library",
    ],
)

go_binary(
    name = "project1",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "project1-bin-tar1",
    srcs = ["//project1"],
    modes = {"project1": "0755"},
    package_dir = "/",
    strip_prefix = "/project1/linux_amd64_pure_stripped",
)

container_image(
    name = "project1-bin-container",
    base = "@official_ubuntu//image",
    tars = [":project1-bin-tar1"],
    cmd = ["/project1"],
)

container_push(
   name = "project1_push",
   image = ":project1-bin-container",
   registry = "gcr.io",
   repository = "gcb-with-custom-workers/project1",
   tag = "latest",
   format = "Docker",
)