load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["p1lib.go"],
    importpath = "github.com/BazelBuildForGo/project1/p1lib",
    visibility = ["//visibility:public"],
    deps = ["@com_github_wix_private_bazelbuildforgo//project1/dep1:go_default_library"],
)
